--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,7 @@
 config:
   # Language
   # en/cn
-  lang: cn
+  lang: en
 
   # Your namespace
   namespace: "nameplates"
@@ -37,6 +37,10 @@ config:
   # keep it empty if you don't want to enable this feature.
   prefix: ''
   suffix: ''
+
+  # should prefix/suffix be hidden when player is equipping a nameplate
+  hide-prefix-when-equipped: false
+  hide-suffix-when-equipped: false
 
   # Thin-font support
   use-thin-font: false
