--- a/src/main/resources/database.yml
+++ b/src/main/resources/database.yml
@@ -4,6 +4,7 @@ settings:
   # Restart is a must when you change database configuration.
   storage-mode: SQLite
   use-pool: false
+  disable-async: false
 
 # MySQL settings
 MySQL:
