--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,6 +9,7 @@ softdepend:
   - ItemsAdder
   - PlaceholderAPI
   - TAB
+  - Oraxen
 commands:
   customnameplates:
     usage: /customnameplates help
