--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '1.8.1'
+version = '1.8.4'
 
 repositories {
     mavenCentral()
@@ -44,7 +44,7 @@ dependencies {
     implementation('net.kyori:adventure-api:4.11.0')
     implementation('net.kyori:adventure-platform-bukkit:4.1.1')
     implementation('net.kyori:adventure-text-minimessage:4.11.0')
-    implementation("net.kyori:adventure-text-serializer-gson:4.11.0")
+    implementation('net.kyori:adventure-text-serializer-gson:4.11.0')
 }
 
 def targetJavaVersion = 16
