--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '1.8.4'
+version = '1.8.7'
 
 repositories {
     mavenCentral()
@@ -41,6 +41,7 @@ dependencies {
     compileOnly 'me.clip:placeholderapi:2.11.1'
     compileOnly 'com.zaxxer:HikariCP:5.0.1'
     compileOnly 'commons-io:commons-io:2.11.0'
+    compileOnly 'dev.dejvokep:boosted-yaml:1.3'
     implementation('net.kyori:adventure-api:4.11.0')
     implementation('net.kyori:adventure-platform-bukkit:4.1.1')
     implementation('net.kyori:adventure-text-minimessage:4.11.0')
