--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '1.8.7'
+version = '2.0-PRE-1'
 
 repositories {
     mavenCentral()
@@ -43,7 +43,7 @@ dependencies {
     compileOnly 'commons-io:commons-io:2.11.0'
     compileOnly 'dev.dejvokep:boosted-yaml:1.3'
     implementation('net.kyori:adventure-api:4.11.0')
-    implementation('net.kyori:adventure-platform-bukkit:4.1.1')
+    implementation('net.kyori:adventure-platform-bukkit:4.1.2')
     implementation('net.kyori:adventure-text-minimessage:4.11.0')
     implementation('net.kyori:adventure-text-serializer-gson:4.11.0')
 }
@@ -78,8 +78,9 @@ tasks.withType(JavaCompile) {
 }
 
 shadowJar {
-    relocate ('net.kyori', 'libs.kyori')
+    relocate ('net.kyori', 'net.momirealms.customnameplates.libs')
 }
+
 tasks.register("delete", Delete).get().delete("build/libs/"+project.name+"-"+project.version+".jar")
 tasks.named("build").get().dependsOn("shadowJar").finalizedBy("delete").doLast {
     println("Deleting: "+ "build/libs/"+project.name+"-"+project.version+".jar")
