--- a/src/main/resources/messages/messages_cn.yml
+++ b/src/main/resources/messages/messages_cn.yml
@@ -15,3 +15,4 @@ messages:
   available: '<white>可用铭牌: {Nameplates}</white>'
   cooldown: '<white>上一个预览还没结束!</white>'
   generate: '<white>正在生成资源包...</white>'
+  no-nameplate: '无铭牌'
