--- a/src/main/resources/messages/messages_en.yml
+++ b/src/main/resources/messages/messages_en.yml
@@ -15,3 +15,4 @@ messages:
   available: '<white>Available nameplates: {Nameplates}.</white>'
   cooldown: '<white>Previewing is still Ongoing!</white>'
   generate: '<white>Resource Pack is generating..</white>'
+  no-nameplate: 'No Nameplate'
