--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '2.0-PRE-7'
+version = '2.0-PRE-8'
 
 repositories {
     mavenCentral()
@@ -32,6 +32,10 @@ repositories {
         name = "jitpack"
         url = 'https://jitpack.io'
     }
+    maven {
+        name = "codecrafter47-repo"
+        url = 'https://nexus.codecrafter47.de/content/repositories/public/'
+    }
 }
 
 dependencies {
@@ -42,6 +46,8 @@ dependencies {
     compileOnly 'com.zaxxer:HikariCP:5.0.1'
     compileOnly 'commons-io:commons-io:2.11.0'
     compileOnly 'dev.dejvokep:boosted-yaml:1.3'
+    compileOnly 'net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT'
+    compileOnly 'codecrafter47.bungeetablistplus:bungeetablistplus-api-bungee:3.5.2'
     implementation('net.kyori:adventure-api:4.11.0')
     implementation('net.kyori:adventure-platform-bukkit:4.1.2')
     implementation('net.kyori:adventure-text-minimessage:4.11.0')
