--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '2.0-PRE-9-HOTFIX'
+version = '2.0-PRE-11'
 
 repositories {
     mavenCentral()
@@ -48,6 +48,7 @@ dependencies {
     compileOnly 'dev.dejvokep:boosted-yaml:1.3'
     compileOnly 'net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'codecrafter47.bungeetablistplus:bungeetablistplus-api-bungee:3.5.2'
+    compileOnly 'com.github.LoneDev6:api-itemsadder:3.2.3c'
     implementation('net.kyori:adventure-api:4.11.0')
     implementation('net.kyori:adventure-platform-bukkit:4.1.2')
     implementation('net.kyori:adventure-text-minimessage:4.11.0')
