--- a/src/main/resources/bubble.yml
+++ b/src/main/resources/bubble.yml
@@ -1,10 +1,10 @@
 # Do not change
-config-version: '7'
+config-version: '8'
 
 bubble:
 
   # Player's default chatting bubbles
-  default-bubbles: 'none'
+  default-bubbles: 'chat'
 
   # Text format when no bubbles equipped
   default-format: '<white><underlined>'
@@ -18,8 +18,15 @@ bubble:
   line-spacing: 0.5
 
   # This decides where the bottom line is
-  bottom-line-Y-offset: 0.6
+  bottom-line-Y-offset: -1.5
 
   # Seconds
   # This decides how long will the chat hologram remains
   stay-time: 5
+
+  # Plugin would ignore player's chat message when its length is over a certain value
+  max-char-length: 35
+
+  # Cool Down (seconds)
+  # Plugin would ignore player's chat message when it is still in cool down
+  cool-down: 1
